@@ -41,24 +41,34 @@ import com.google.common.collect.ImmutableList;
 
 public class WaywardseaBiome {
 	public static Biome createBiome() {
-		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-4131073).waterColor(-13421721).waterFogColor(-4737097).skyColor(-4131073).foliageColorOverride(-5573377).grassColorOverride(-1245697)
-				.ambientLoopSound(new SoundEvent(new ResourceLocation("theabyss:frost_world_ambience"))).backgroundMusic(new Music(new SoundEvent(new ResourceLocation("theabyss:the_abyss_music")), 12000, 24000, true))
+		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-4131073).waterColor(-13421721).waterFogColor(-4737097)
+				.skyColor(-4131073).foliageColorOverride(-5573377).grassColorOverride(-1245697)
+				.ambientLoopSound(new SoundEvent(new ResourceLocation("theabyss:frost_world_ambience")))
+				.backgroundMusic(new Music(new SoundEvent(new ResourceLocation("theabyss:the_abyss_music")), 12000, 24000, true))
 				.ambientParticle(new AmbientParticleSettings(ParticleTypes.ASH, 0.02f)).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("theabyss:tree_waywardsea",
 						FeatureUtils.register("theabyss:tree_waywardsea", Feature.TREE,
-								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.DARK_OAK_LOG.defaultBlockState()), new ForkingTrunkPlacer(25, 2, 2), BlockStateProvider.simple(Blocks.OAK_LEAVES.defaultBlockState()),
+								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.DARK_OAK_LOG.defaultBlockState()),
+										new ForkingTrunkPlacer(25, 2, 2), BlockStateProvider.simple(Blocks.OAK_LEAVES.defaultBlockState()),
 										new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)), new TwoLayersFeatureSize(1, 0, 2))
-										.decorators(ImmutableList.of(WaywardseaLeaveDecorator.INSTANCE, WaywardseaTrunkDecorator.INSTANCE, WaywardseaFruitDecorator.INSTANCE)).build()),
-						List.of(CountPlacement.of(11), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+										.decorators(ImmutableList.of(WaywardseaLeaveDecorator.INSTANCE, WaywardseaTrunkDecorator.INSTANCE,
+												WaywardseaFruitDecorator.INSTANCE))
+										.build()),
+						List.of(CountPlacement.of(11), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
+								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
+								BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("theabyss:grass_waywardsea", VegetationFeatures.PATCH_GRASS, List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
+				PlacementUtils.register("theabyss:grass_waywardsea", VegetationFeatures.PATCH_GRASS,
+						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
+								BiomeFilter.biome())));
 		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addFossilDecoration(biomeGenerationSettings);
 		BiomeDefaultFeatures.addSurfaceFreezing(biomeGenerationSettings);
 		MobSpawnSettings.Builder mobSpawnInfo = new MobSpawnSettings.Builder();
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(EntityType.POLAR_BEAR, 20, 1, 2));
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.SNOW).temperature(-1f).downfall(1f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.SNOW).temperature(-1f).downfall(1f).specialEffects(effects)
+				.mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
